manifests/hashfab-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - image: mongo
        name: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: mongo-storage
            mountPath: /data/db
      volumes:
        - name: mongo-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hashfab-api
  name: hashfab-api
spec:
  selector:
    app: hashfab-api
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hashfab-api
  name: hashfab-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashfab-api
  template:
    metadata:
      labels:
        app: hashfab-api
    spec:
      containers:
      - image: dgunjetti/hashfab-api
        name: hashfab-api
        ports:
        - containerPort: 80
        volumeMounts:
        - name: api-secrets
          mountPath: /etc/hashfab
      volumes:
      - name: api-secrets
        secret:
          secretName: api-secrets
