manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
     kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: testapi.hashfab.in
    http:
      paths:
      - path: /
        backend:
          serviceName: hashfab-api
          servicePort: 80
